--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "p11_kasa_verley_julien",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://julfrontdev.github.io/julien_verley_11_062022", 
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
