Tests github pages deployment

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
+# Works on GitHub pages and locally: 
 REACT_APP_FOR_PATH = /julfrontdev.github.io/julien_verley_11_062022/
+
+# Works on GitHub pages (images): 
+REACT_APP_FOR_PATH_FOR_PICS = /julien_verley_11_062022/
+# # Works locally (images): 
+# REACT_APP_FOR_PATH_FOR_PICS =
+
+
